# shared_files

./: .gitignore  README.md  make.bat
client/data/settings_game/: metin2.cfg
client/data/symbol_guild/: 10_0.tga
client/pack/: Index  icon.eix  maps.eix  property.eix  root.eix  root.epk  season.eix  textureset.eix  textureset.epk  yw_etc.eix  yw_patch.eix
srcs/client/CWebBrowser/: CWebBrowser.c  CWebBrowser.h
srcs/client/EffectLib/: EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBase.h  EffectElementBaseInstance.cpp  EffectElementBaseInstance.h  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectMeshInstance.h  EffectUpdateDecorator.cpp  EffectUpdateDecorator.h  EmitterProperty.cpp  EmitterProperty.h  FrameController.cpp  FrameController.h  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemData.h  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.cpp  StdAfx.h  Type.cpp  Type.h
srcs/client/EterBase/: Base.cpp  Base.h  CPostIt.cpp  CPostIt.h  CRC32.cpp  CRC32.h  Debug.cpp  Debug.h  FileBase.cpp  FileBase.h  FileDir.cpp  FileDir.h  FileLoader.cpp  FileLoader.h  Filename.h  MappedFile.cpp  MappedFile.h  Poly.cpp  Poly.h  Random.cpp  Random.h  ServiceDefs.h  Singleton.h  StdAfx.cpp  StdAfx.h  Stl.cpp  Stl.h  SymTable.cpp  SymTable.h  Symbol.cpp  Symbol.h  TempFile.cpp  TempFile.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  cipher.cpp  cipher.h  error.cpp  (+6 more)
srcs/client/EterGrnLib/: LODController.cpp  LODController.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  Motion.cpp  Motion.h  StdAfx.h  Thing.cpp  Thing.h  ThingInstance.cpp  ThingInstance.h  Util.cpp  Util.h
srcs/client/EterImageLib/: DXTCImage.cpp  DXTCImage.h  Image.cpp  Image.h  StdAfx.cpp  StdAfx.h  TGAImage.cpp  TGAImage.h
srcs/client/EterLib/: AttributeData.cpp  AttributeData.h  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  BlockTexture.h  Camera.cpp  Camera.h  CollisionData.cpp  CollisionData.h  ColorTransitionHelper.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  DibBar.h  Dimm.h  Dynamic.h  EnvironmentMap.cpp  EnvironmentMap.h  Event.h  FileLoaderThread.cpp  FileLoaderThread.h  FuncObject.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.cpp  GrpCollisionObject.h  GrpColor.cpp  GrpColor.h  GrpColorInstance.cpp  GrpColorInstance.h  GrpD3DXBuffer.cpp  GrpD3DXBuffer.h  GrpDIB.cpp  GrpDIB.h  GrpDetector.cpp  GrpDetector.h  (+111 more)
srcs/client/EterLocale/: Arabic.cpp  Arabic.h  CodePageId.h  Japanese.cpp  Japanese.h  StdAfx.cpp  StdAfx.h  StringCodec.cpp  StringCodec.h  (+2 more)
srcs/server/: CMakeLists.txt
srcs/server/common/: CommonDefines.h  PulseManager.h  VnumHelper.h  billing.h  building.h  cache.h  d3dtype.h  item_length.h  json_helper.h  length.h  noncopyable.h  pool.h  service.h  singleton.h  stl.h  tables.h  utils.h
srcs/server/db/: CMakeLists.txt
srcs/server/db/src/: Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerIkarusShop.cpp  ClientManagerLogin.cpp  ClientManagerParty.cpp  ClientManagerPlayer.cpp  Config.cpp  Config.h  CsvReader.cpp  CsvReader.h  DBManager.cpp  DBManager.h  GuildManager.cpp  GuildManager.h  HB.cpp  HB.h  IkarusShopCache.cpp  IkarusShopCache.h  ItemAwardManager.cpp  ItemAwardManager.h  ItemIDRangeManager.cpp  ItemIDRangeManager.h  Lock.cpp  Lock.h  LoginData.cpp  LoginData.h  Main.cpp  Main.h  Marriage.cpp  Marriage.h  Monarch.cpp  Monarch.h  MoneyLog.cpp  MoneyLog.h  (+12 more)
srcs/server/game/: CMakeLists.txt
srcs/server/game/src/: BlueDragon.cpp  BlueDragon.h  BlueDragon_Binder.cpp  BlueDragon_Binder.h  BlueDragon_Skill.h  ClientPackageCryptInfo.cpp  ClientPackageCryptInfo.h  DragonLair.cpp  DragonLair.h  DragonSoul.cpp  DragonSoul.h  FSM.cpp  FSM.h  FileMonitor_FreeBSD.cpp  FileMonitor_FreeBSD.h  IFileMonitor.h  MarkConvert.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  MarkManager.h  OXEvent.cpp  OXEvent.h  PetSystem.cpp  PetSystem.h  affect.cpp  affect.h  affect_flag.h  ani.cpp  ani.h  any_function.h  arena.cpp  arena.h  banword.cpp  banword.h  battle.cpp  battle.h  belt_inventory_helper.h  blend_item.cpp  blend_item.h  (+246 more)
srcs/server/game/src/quest/: crc32.cc  crc32.h  create_conversion.cc  qc.cc
srcs/server/libgame/: CMakeLists.txt
srcs/server/libgame/include/: attribute.h  grid.h  targa.h
srcs/server/libgame/src/: attribute.cc  grid.cc  targa.cc
srcs/server/liblua/: CMakeLists.txt
srcs/server/liblua/include/: lauxlib.h  lua.h  lualib.h
srcs/server/liblua/src/: lapi.c  lapi.h  lcode.c  lcode.h  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  ltable.c  ltable.h  ltests.c  ltm.c  ltm.h  lundump.c  lundump.h  lvm.c  lvm.h  lzio.c  lzio.h
srcs/server/liblua/src/lib/: lauxlib.c  lbaselib.c  ldblib.c  liolib.c  lmathlib.c  loadlib.c  lstrlib.c  ltablib.c
srcs/server/libpoly/: Base.cc  Base.h  CMakeLists.txt  Constants.h  Poly.cc  Poly.h  SymTable.cc  SymTable.h  Symbol.cc  Symbol.h  main.cc
srcs/server/libsql/: AsyncSQL.cpp  AsyncSQL.h  CMakeLists.txt  Semaphore.cpp  Semaphore.h  Statement.cpp  Statement.h  Tellwait.cpp  Tellwait.h  libsql.h  stdafx.h
srcs/server/libthecore/: CMakeLists.txt
srcs/server/libthecore/include/: stdafx.h  topt.h  typedef.h  utils.h
srcs/server/libthecore/src/: base32.c  buffer.c  gost.c  heart.c  hmac.c  log.c  main.c  sha1.c  signal.c  socket.c  tea.c  topt.c  utils.c  utils.cpp  xmd5.c
tools/: premake5.lua
(+367 files in other folders)
